<resources>
    <string name="app_name">EASYSPEAK_v2.1</string>
    <string name="todo">TODO</string>
    <string name="txtbemvindo">Bem vindo! Clique nos botões abaixo para começar!</string>
    <string name="aulas">Aulas</string>
    <string name="progresso">Progresso</string>
    <string name="txtaula1">AULA 1 - INTRODUÇÕES</string>
    <string name="aula_2_to_be">AULA 2 - TO BE</string>
    <string name="aula_3_alimentos">AULA 3 - ALIMENTOS</string>
    <string name="aula_4_animais">AULA 4 - ANIMAIS</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="parab_ns_voc_completou_as_seguintes_aulas">Parabéns! Você completou as seguintes aulas:</string>
    <string name="progresso2">PROGRESSO</string>
    <string name="ol_estou_aqui_para_te_ajudar_clique_em_mim_para_come_ar">Olá! Estou aqui para te ajudar. Clique em mim para começar!</string>
    <string name="button">Button</string>
    <string name="msc">MÚSICAS</string>
    <string name="instru">Digite aqui os SUBSTANTIVOS que ouvir na música.</string>
    <string name="digite_abaixo_os_substantivos_que_ouvir_na_m_sica">Digite abaixo os SUBSTANTIVOS que ouvir na música.</string>
    <string name="digite_pelo_menos_5_substantivos_que_ouvir_na_m_sica">Digite pelo menos 5 SUBSTANTIVOS que ouvir na música.</string>
    <string name="digite_na_caixa_abaixo_pelo_menos_5_substantitvos_que_ouvir_na_m_sica">Digite na caixa abaixo pelo menos 5 SUBSTANTITVOS que ouvir na música.</string>
    <string name="resposta_sunshine_day_month_way_girl_song_birds_trees_money_fortune_fame">RESPOSTA: sunshine, day, month, way, girl, song, birds, trees, money, fortune, fame.</string>
    <string name="ver_resposta">VER RESPOSTA</string>
    <string name="pr_xima_m_sica">Próxima música</string>
    <string name="digite_na_caixa_abaixo_as_partes_que_entender_do_refr_o_da_m_sica">Digite na caixa abaixo as partes que entender do REFRÃO da música.</string>
    <string name="a">a</string>
    <string name="aula_1">AULA 1</string>
    <string name="tabela">tabela</string>
    <string name="exerc_cios">EXERCÍCIOS</string>
    <string name="i_m_fine_thanks_i_m_from_brazil_what_s_your_name_see_you_tomorrow">I’m fine, thanks. // I’m from Brazil. // What’s your name? // See you tomorrow!</string>
    <string name="good_night_my_name_is_john_nice_to_meet_you_john_take_care">Good night. // My name is John. // Nice to meet you, John. // Take care!</string>
    <string name="conversas">Conversas</string>
    <string name="n_vel_b_sico">Nível básico</string>
    <string name="sauda_es">Saudações</string>
    <string name="cafeteria">CAFETERIA</string>
    <string name="n_vel_intermedi_rio">Nível intermediário</string>
    <string name="profiss_es">PROFISSÕES</string>
    <string name="emo_es">EMOÇÕES</string>
    <string name="sd">Saudações</string>
    <string name="persona1">persona1</string>
    <string name="sa">sa</string>
    <string name="qual_das_mensagens_abaixo_completa_melhor_o_di_logo">Qual das mensagens abaixo completa melhor o diálogo?</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="sobree">SOBRE</string>
    <string name="asa">a</string>
    <string name="aula_2">AULA 2</string>
    <string name="ççç">a</string>
    <string name="fix">EXERCÍCIO DE FIXAÇÃO</string>
    <string name="the_fools">© The Fools</string>
    <string name="fggg">TODO</string>
    <string name="ver_exerc_cios">VER EXERCÍCIOS</string>
    <string name="exerc_cios_1">EXERCÍCIOS (1)</string>
    <string name="textview">TextView</string>
    <string name="trad">VER TRADUÇÃO</string>
    <string name="ggfgfgf">TODO</string>
    <string name="fggfgfgf">TODO</string>
    <string name="sadsfds">txaula1</string>
    <string name="dsdsds">TextView</string>
    <string name="aulaum">Aulaum</string>
    <string name="aulaquatro">Aulaquatro</string>
    <string name="aulatres">Aulatres</string>
    <string name="auladois">Auladois</string>
    <string name="_1_complete_a_frase_hello_what_s">1) Complete a frase: Hello, what\'s ________?</string>
    <string name="yor_name">yor name!</string>
    <string name="your_name">your name?</string>
    <string name="your_age">your age?</string>
    <string name="poixmx">Próximo</string>
    <string name="aula_21222">Aula 2</string>
    <string name="aula_2_alimentos">AULA 2 - ALIMENTOS</string>
    <string name="_1_como_se_diz_caf_em_ingl_s">1) Como se diz caféem inglês?</string>
    <string name="coffee">coffee</string>
    <string name="caffee">caffee</string>
    <string name="cofe">cofe</string>
    <string name="_1_como_se_diz_caf_em_ingl_dds">1) Como se diz café em inglês?</string>
    <string name="aula_3_animais">Aula 3 - Animais</string>
    <string name="aula_4_emo_es">Aula 4 - Emoções</string>
    <string name="exerc_cios_2">EXERCÍCIOS (2)</string>
    <string name="aula_3">Aula 3</string>
    <string name="exerc_cios_3">EXERCÍCIOS(3)</string>
    <string name="_1_qual_a_tradu_o_de_bat">1) Qual a tradução de bat?</string>
    <string name="le_o">Leão</string>
    <string name="morcego">Morcego</string>
    <string name="cachorro">Cachorro</string>
    <string name="aula_4">Aula 4</string>
    <string name="exerc_cios_4">EXERCÍCIOS(4)</string>
    <string name="_1_como_se_diz_triste_em_ingl_s">1) Como se diz tristeem inglês?</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="hungry">Hungry</string>
    <string name="aaaadsfdggfdgdfgfd">1) Como se diz triste em inglês?</string>
    <string name="s_ries">Séries</string>
    <string name="em_constru_o">Em construção!</string>
    <string name="ghjklkjhgfds">TODO</string>
    <string name="teste_sua_audi_o">Teste sua audição!</string>
    <string name="_1_qual_frase_repetida_v_rias_vezes_pela_personagem_do_v_deo_abaixo">1) Qual frase é repetida várias vezes pela personagem do vídeo abaixo?</string>
    <string name="quot_i_don_t_understand_his_texts_quot">\"I don\'t understand his texts\".</string>
    <string name="you_have_no_emojis">You have no emojis.</string>
    <string name="a_box_with_a_question_mark">A box with a question mark.</string>
    <string name="prox">PRÓXIMO</string>
    <string name="_2_o_que_a_personagem_diz_quando_a_tela_azul_aparece">2) O que a personagem diz quando a tela azul aparece?</string>
    <string name="i_cleaned_everything">I cleaned everything.</string>
    <string name="i_matched_everyone">I matched everyone.</string>
    <string name="i_erased_everything">I erased everything.</string>
    <string name="bem_vindo_clique_no_bot_o_para_come_ar">Bem vindo! Clique no botão ?para começar!</string>
    <string name="bem_vindo_clique_no_bot_o_de_interroga_o_para_come_ar">Bem vindo! Clique no botão de interrogação (?) para começar!</string>
    <string name="voc_completou_os_exerc_cios_volte_para_a_tela_inicial">Você completou os exercícios! Volte para a tela inicial.</string>
    <string name="teste_sua_pron_ncia">Teste sua pronúncia</string>
    <string name="_1_clique_no_microfone_abaixo_e_diga_i_like_apples">1) Clique no microfone abaixo e diga: I like apples.</string>
    <string name="gogogogogogog">TODO</string>
    <string name="cmnvfnnf">TODO</string>
    <string name="voc_disse">Você disse...</string>
    <string name="i_don_t_understand_his_textss">I don\'t understand his texts.</string>
    <string name="i_just_erased_everything">I just erased everything.</string>
    <string name="ffff">sdsfsd</string>
    <string name="gggg">PRÓXIMO</string>
    <string name="aula_5_profiss_es">Aula 5 - Profissões</string>
    <string name="aula_8_gostos">Aula 8 - Gostos</string>
    <string name="aula_7_verbo_to_be">Aula 7 - Verbo To Be</string>
    <string name="aula_6_adjetivos">Aula 6 - Adjetivos</string>
    <string name="fffff">Aula 5 - Profissões</string>
    <string name="ssdsds">Aula 7 - Adjetivos</string>
    <string name="fdfdfdfdfd">Aula 6 - Verbo To Be</string>
    <string name="hghghg">Aula 8 - Gostos</string>
    <string name="livros_gratuitos">Livros gratuitos</string>
    <string name="aqui_voc_pode_ler_livros_gratuitos_em_ingl_s_escolha_um_dos_livros_abaixo_e_boa_leitura">Aqui, você pode ler livros gratuitos em inglês! Escolha um dos livros abaixo e boa leitura!</string>
    <string name="sasds">TODO</string>
    <string name="fgfdgfdg">TODO</string>
    <string name="fdgdgfdgd">TODO</string>
    <string name="hghgfhf">TODO</string>
    <string name="easspeak">TODO</string>
    <string name="porcentagem">0%</string>
    <string name="easyspeak">EasySpeak 2.1</string>
    <string name="ao_completar_as_aulas_voc_pode_juntar_moedas_e_comprar_algum_dos_itens_abaixo">Ao completar as aulas, você pode juntar moedas e comprar algum dos itens abaixo.</string>
    <string name="conquistas">Conquistas</string>


</resources>