<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F5FA"
    tools:context=".act_progresso">

    <ImageView
        android:id="@+id/personaprog"
        android:layout_width="525dp"
        android:layout_height="645dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="320dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pose2" />

    <TextView
        android:id="@+id/txprogtitulo2"
        android:layout_width="475dp"
        android:layout_height="60dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="91dp"
        android:background="#99C8DD"
        android:fontFamily="@font/aladin"
        android:text="@string/progresso2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtprogresso2"
        android:layout_width="404dp"
        android:layout_height="189dp"
        android:layout_marginTop="124dp"
        android:text="@string/parab_ns_voc_completou_as_seguintes_aulas"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txprogress"
        android:layout_width="158dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="258dp"
        android:layout_marginBottom="596dp"
        android:text="@string/aulaum"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txprogress3"
        android:layout_width="158dp"
        android:layout_height="41dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="596dp"
        android:text="@string/aulatres"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txprogress2"
        android:layout_width="158dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="292dp"
        android:layout_marginBottom="531dp"
        android:text="@string/auladois"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/txprogress4"
        android:layout_width="158dp"
        android:layout_height="41dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="531dp"
        android:text="@string/aulaquatro"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

</androidx.constraintlayout.widget.ConstraintLayout>