<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F5FA"
    tools:context=".act_aula2_exercicios">

    <TextView
        android:id="@+id/txtermino2"
        android:layout_width="377dp"
        android:layout_height="133dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="542dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="116dp"
        android:text="@string/voc_completou_os_exerc_cios_volte_para_a_tela_inicial"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtitu"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="720dp"
        android:background="#99C8DD"
        android:fontFamily="@font/aladin"
        android:text="@string/exerc_cios_2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/a2p1"
        android:layout_width="377dp"
        android:layout_height="133dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="560dp"
        android:text="@string/_1_como_se_diz_caf_em_ingl_dds"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/a2r1"
        android:layout_width="343dp"
        android:layout_height="59dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="44dp"
        android:background="@android:color/darker_gray"
        android:text="@string/caffee"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/a2r2"
        android:layout_width="343dp"
        android:layout_height="59dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="44dp"
        android:background="@android:color/darker_gray"
        android:text="@string/coffee"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/a2r3"
        android:layout_width="343dp"
        android:layout_height="59dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="44dp"
        android:background="@android:color/darker_gray"
        android:text="@string/cofe"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btprox"
        android:layout_width="139dp"
        android:layout_height="76dp"
        android:layout_marginStart="251dp"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="212dp"
        android:text="@string/poixmx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btprox2"
        android:layout_width="139dp"
        android:layout_height="76dp"
        android:layout_marginStart="251dp"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="212dp"
        android:text="@string/poixmx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>